# fhx_project

./: README.md
Ballistic_Calculation_Camera/: CMakeLists.txt
Ballistic_Calculation_Camera/io/: camera.cpp  camera.hpp
Ballistic_Calculation_Camera/src/: main.cpp
Ballistic_Calculation_Camera/tasks/: ballistic_solver.hpp  detector.cpp  kalman_filter.hpp
